welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: ')' expected but '=' found.
while (1=1) {
        ^BDRBuggle:74: error: illegal start of simple expression
	}
        ^